unpackaged/main/default/objects/FSL_Member_Vehicle__c/FSL_Member_Vehicle__c.object-meta.xml
<CustomObject>
    <label>Member Vehicle</label>
    <nameField>
        <label>Member Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Member Vehicles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>