unpackaged/main/default/objects/FSL_Member_Vehicle__c/fields/ACG_Additional_Vehicle_Information__c.field-meta.xml
<CustomField>
    <fullName>ACG_Additional_Vehicle_Information__c</fullName>
    <label>Additional Vehicle Information</label>
    <type>TextArea</type>
</CustomField>