unpackaged/main/default/objects/FSL_Member_Vehicle__c/fields/ACG_Member__c.field-meta.xml
<CustomField>
    <fullName>ACG_Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Member</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Member Vehicles</relationshipLabel>
    <relationshipName>Member_Vehicles</relationshipName>
    <type>Lookup</type>
</CustomField>