unpackaged/main/default/objects/FSL_Member_Vehicle__c/fields/ACG_Member_Household__c.field-meta.xml
<CustomField>
    <fullName>ACG_Member_Household__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Member Household</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Vehicles</relationshipLabel>
    <relationshipName>Member_Vehicles1</relationshipName>
    <type>Lookup</type>
</CustomField>