unpackaged/main/default/objects/FSL_Member_Vehicle__c/fields/addSecondCar__c.field-meta.xml
<CustomField>
    <fullName>addSecondCar__c</fullName>
    <defaultValue>false</defaultValue>
    <label>addSecondCar</label>
    <type>Checkbox</type>
</CustomField>