unpackaged/main/default/objects/FSL_Member_Vehicle__c/fields/Door_Keycodes__c.field-meta.xml
<CustomField>
    <fullName>Door_Keycodes__c</fullName>
    <label>Door Keycodes</label>
    <length>20</length>
    <type>Text</type>
</CustomField>