unpackaged/main/default/objects/FSL_Member_Vehicle__c/fields/Duty__c.field-meta.xml
<CustomField>
    <fullName>Duty__c</fullName>
    <label>Duty</label>
    <length>50</length>
    <type>Text</type>
</CustomField>