unpackaged/main/default/objects/FSL_Member_Vehicle__c/fields/Ignition_Keycodes__c.field-meta.xml
<CustomField>
    <fullName>Ignition_Keycodes__c</fullName>
    <label>Ignition Keycodes</label>
    <length>20</length>
    <type>Text</type>
</CustomField>