unpackaged/main/default/objects/FSL_Member_Vehicle__c/fields/Maximum_Mileage__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Mileage__c</fullName>
    <label>Maximum_Mileage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>