unpackaged/main/default/objects/FSL_Member_Vehicle__c/fields/MMPV_Keycodes__c.field-meta.xml
<CustomField>
    <fullName>MMPV_Keycodes__c</fullName>
    <label>MMPV Keycodes</label>
    <length>20</length>
    <type>Text</type>
</CustomField>