unpackaged/main/default/objects/FSL_Member_Vehicle__c/fields/RV_Class__c.field-meta.xml
<CustomField>
    <fullName>RV_Class__c</fullName>
    <label>RV Class</label>
    <length>2</length>
    <type>Text</type>
</CustomField>