unpackaged/main/default/objects/FSL_Member_Vehicle__c/fields/RV_Length__c.field-meta.xml
<CustomField>
    <fullName>RV_Length__c</fullName>
    <label>RV Length</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>