unpackaged/main/default/objects/FSL_Member_Vehicle__c/fields/Trailer_Hitchtype__c.field-meta.xml
<CustomField>
    <fullName>Trailer_Hitchtype__c</fullName>
    <label>Trailer Hitchtype</label>
    <length>15</length>
    <type>Text</type>
</CustomField>