unpackaged/main/default/objects/FSL_Member_Vehicle__c/fields/Trailer_Length__c.field-meta.xml
<CustomField>
    <fullName>Trailer_Length__c</fullName>
    <label>Trailer Length</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>