unpackaged/main/default/objects/FSL_Member_Vehicle__c/fields/Vats_Keycodes__c.field-meta.xml
<CustomField>
    <fullName>Vats_Keycodes__c</fullName>
    <label>Vats Keycodes</label>
    <length>20</length>
    <type>Text</type>
</CustomField>