unpackaged/main/default/objects/FSL_Member_Vehicle__c/fields/Vehicle_Body_Type__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Body_Type__c</fullName>
    <label>Vehicle Body Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>