unpackaged/main/default/objects/FSL_Member_Vehicle__c/fields/Vehicle_Color__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Color__c</fullName>
    <label>Vehicle Color</label>
    <length>30</length>
    <type>Text</type>
</CustomField>