unpackaged/main/default/objects/FSL_Member_Vehicle__c/fields/Vehicle_Engine_Displacement_CL__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Engine_Displacement_CL__c</fullName>
    <description>Plate2Vin</description>
    <label>Vehicle Engine Displacement CL</label>
    <length>10</length>
    <type>Text</type>
</CustomField>