unpackaged/main/default/objects/FSL_Member_Vehicle__c/fields/Vehicle_Fuel_Type__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Fuel_Type__c</fullName>
    <label>Vehicle Fuel Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>