unpackaged/main/default/objects/FSL_Member_Vehicle__c/fields/Vehicle_Odometer__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Odometer__c</fullName>
    <label>Vehicle Odometer</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>