unpackaged/main/default/objects/FSL_Member_Vehicle__c/fields/Vehicle_Plate__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Plate__c</fullName>
    <description>Copied from Case//EMI</description>
    <label>Vehicle Plate</label>
    <length>8</length>
    <type>Text</type>
</CustomField>