unpackaged/main/default/objects/FSL_Member_Vehicle__c/fields/Vehicle_Special_Equipment_Needs__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Special_Equipment_Needs__c</fullName>
    <label>Vehicle Special Equipment Needs</label>
    <length>128</length>
    <type>Text</type>
</CustomField>