unpackaged/main/default/objects/FSL_Member_Vehicle__c/fields/Vehicle_State__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_State__c</fullName>
    <label>Vehicle State</label>
    <length>2</length>
    <type>Text</type>
</CustomField>