unpackaged/main/default/objects/FSL_Member_Vehicle__c/fields/Vehicle_Tag__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Tag__c</fullName>
    <label>Vehicle Tag</label>
    <length>10</length>
    <type>Text</type>
</CustomField>