unpackaged/main/default/objects/FSL_Member_Vehicle__c/fields/Vehicle_Trim__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Trim__c</fullName>
    <label>Vehicle Trim</label>
    <length>40</length>
    <type>Text</type>
</CustomField>