unpackaged/main/default/objects/FSL_Member_Vehicle__c/fields/Vehicle_VIN__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_VIN__c</fullName>
    <label>Vehicle VIN</label>
    <length>20</length>
    <type>Text</type>
</CustomField>