unpackaged/main/default/objects/FSL_Member_Vehicle__c/fields/Vehicle_Vin_Pattern__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Vin_Pattern__c</fullName>
    <description>Plate2Vin</description>
    <label>Vehicle Vin Pattern</label>
    <length>100</length>
    <type>Text</type>
</CustomField>