unpackaged/main/default/objects/FSL_Member_Vehicle__c/fields/Vehicle_Year__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Year__c</fullName>
    <label>Vehicle Year</label>
    <length>5</length>
    <type>Text</type>
</CustomField>