unpackaged/main/default/objects/FSL_Member_Vehicle__c/fields/VIN_Encrypted__c.field-meta.xml
<CustomField>
    <fullName>VIN_Encrypted__c</fullName>
    <formula>IF(NOT(ISBLANK(Vehicle_VIN__c)), &#39;XXXXXXXXX&#39; + RIGHT(Vehicle_VIN__c, 8),&#39;&#39;)</formula>
    <label>VIN Encrypted</label>
    <type>Text</type>
</CustomField>