unpackaged/main/default/objects/FSL_Member_Vehicle__c/fields/Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Work_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Order</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>Member Vehicles</relationshipLabel>
    <relationshipName>Member_Vehicles</relationshipName>
    <type>Lookup</type>
</CustomField>