unpackaged/main/default/objects/FSL_Member_Vehicle__c/fields/YearMakeModel__c.field-meta.xml
<CustomField>
    <fullName>YearMakeModel__c</fullName>
    <formula>IF(NOT(ISBLANK(Vehicle_Type__c)),Vehicle_Year__c &amp; &#39; &#39; &amp; Vehicle_Make__c &amp; &#39; &#39; &amp; Vehicle_Model__c &amp; &#39; &#39; &amp; Vehicle_Color__c &amp; &#39; &#39; &amp; Vehicle_Plate__c &amp; &#39; - &#39; &amp; Vehicle_Type__c, Vehicle_Year__c &amp; &#39; &#39; &amp; Vehicle_Make__c &amp; &#39; &#39; &amp; Vehicle_Model__c &amp; &#39; &#39; &amp; Vehicle_Color__c &amp; &#39; &#39; &amp; Vehicle_Plate__c)</formula>
    <label>Vehicle Profile</label>
    <type>Text</type>
</CustomField>