unpackaged/main/default/objects/FSL_Member_Vehicle__c/recordTypes/Member.recordType-meta.xml
<RecordType>
    <fullName>Member</fullName>
    <active>true</active>
    <label>Member</label>
</RecordType>