unpackaged/main/default/objects/FSL_Member_Vehicle__c/validationRules/Odometer_Limit.validationRule-meta.xml
<ValidationRule>
    <fullName>Odometer_Limit</fullName>
    <active>false</active>
    <description>Limits length to 6 digits</description>
    <errorConditionFormula>IF( LEN(TEXT(Vehicle_Odometer__c)) &gt; 6 , true, false)</errorConditionFormula>
    <errorMessage>Vehicle odometer can not be greater than 6 digits</errorMessage>
</ValidationRule>