unpackaged/main/default/objects/FSL_Member_Vehicle__c/validationRules/Restrict_Mem_Vehicle_Update_On_WO_Clear.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_Mem_Vehicle_Update_On_WO_Clear</fullName>
    <active>false</active>
    <errorConditionFormula>AND (ISPICKVAL( Work_Order__r.Status , &#39;Cleared&#39;),NOT($Profile.Name=&quot;System Administrator&quot;))</errorConditionFormula>
    <errorMessage>Member Vehicle can not be updated if Work order status is Cleared</errorMessage>
</ValidationRule>