unpackaged/main/default/objects/FSL_Member_Vehicle__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Door_Keycodes__c</columns>
    <columns>Duty__c</columns>
    <columns>Ignition_Keycodes__c</columns>
    <columns>Vehicle_Drive_Type__c</columns>
    <columns>Vehicle_Make__c</columns>
    <columns>Vehicle_Model__c</columns>
    <columns>Vehicle_Type__c</columns>
    <columns>Vehicle_Year__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>